refactor(api): use `NightCompress` library for reading CBX (#113)
* build: drop unrar from dockerfile

* build: add libarchive to dockerfile

* ci: add libarchive for tests

* build: try adding to the gradle build

* refactor: use nightcompress for reading CBX

* test: disable tests using nightcompress when unavailable

* ci: drop showing java information

* build: add libarchive to dev compose

* build: fix libarchive link in alpine

seems alpine doesn't create libarchive.so and this seems to be the
easiest approach to fix that

* build: use expected order for allowing java to use native libs

* fix: ensure we initialize NightCompress before using it

* fix: properly find input stream

* fix: return amount of data copied

* test: add helper to turn off tests in ArchiveService

* test: rewrite CbxMetadataExtractorTest to mock archiveService

* refactor: expose `Path` to make `CbxMetadataExtractor` easier to test

* test: drop now useless test

* test: add archiveservice to rar5 integration

* test: mock out archiveservice in cbxreader test

* test: use real archiveservice in cbxconverstionintegration

* file: the cbxconversionservicetest also seems to be integration

* test: remove unused imports from cbxmetadataextractortest

* test: cbxcomicinfocompliance is also an integration

* test: cbxmetadatawriter is also integration

* chore: drop unused properties

* test: make cbxmetadataextractortest do something for covers

before it was basically useless because of fallback

* fix: invert check

* chore: better comment

* test: fix more cbxmetadataextractor tests that never worked

* test: we only ever raise ioexception

* fix: handle `null` comicinfo when parsing

* test: properly test for no files comicinfo

* build: manual link of dev docker compose

* test: if you use any matchers, all must be

* build: drop unrar from dev compose

* test: if you use any matchers, all must be

* test: always get a fresh stream

* test: drop more toFile